# roughtime

./: BUILD  BUILD.gn  BUILDING.md  CONTRIBUTING.md  ECOSYSTEM.md  PROTOCOL.md  README.md  WORKSPACE  client.cc  client.h  client_test.cc  clock_linux.cc  clock_macos.cc  config.proto  logging.h  open_source_fillins.h  protocol.cc  protocol.h  protocol_test.cc  roughtime-servers.json  server.cc  server.h  server_test.cc  simple_client.cc  simple_server.cc  simple_server.h  simple_server_main.cc  sys_time.cc  sys_time.h  time_source.h  udp_processor.cc  udp_processor.h
go/client/: client.go  client_test.go  main.go
go/protocol/: protocol.go  protocol_test.go
go/server/: server.go
